bundled_metadata/force-app/main/default/objects/EUSFA_Remote_Service_Endpoint_URL__c/EUSFA_Remote_Service_Endpoint_URL__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>EUSFA Remote Service Endpoint</label>
</CustomObject>