bundled_metadata/force-app/main/default/objects/EUSFA_Remote_Service_Endpoint_URL__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <label>Description</label>
    <length>150</length>
    <type>Text</type>
</CustomField>