bundled_metadata/force-app/main/default/objects/EUSFA_Remote_Service_Endpoint_URL__c/fields/Label__c.field-meta.xml
<CustomField>
    <fullName>Label__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Label</label>
    <length>150</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>