bundled_metadata/force-app/main/default/objects/EUSFA_Remote_Service_Endpoint_URL__c/fields/Value__c.field-meta.xml
<CustomField>
    <fullName>Value__c</fullName>
    <label>Value</label>
    <length>150</length>
    <type>Text</type>
</CustomField>